--- a/webapp/src/components/EstateDetailPage/EstateSelect/EstateSelectActions/EstateSelectActions.css
+++ b/webapp/src/components/EstateDetailPage/EstateSelect/EstateSelectActions/EstateSelectActions.css
@@ -1,19 +1,23 @@
-.EstateActions .button + .button {
+.EstateSelectActions {
+  margin-top: 30px;
+}
+
+.EstateSelectActions .button + .button {
   margin-left: 15px;
 }
 
-@media (max-width: 920px) {
-  .EstateActions {
+@media (max-width: 991px) {
+  .EstateSelectActions {
     width: 100%;
-    margin: 1em 0;
+    margin: 30px 0;
   }
 
-  .EstateActions .button {
+  .EstateSelectActions .button {
     width: 100%;
     margin-bottom: 1em;
   }
 
-  .EstateActions .button + .button {
-    margin-left: 0px;
+  .EstateSelectActions .button + .button {
+    margin-left: 0;
   }
 }
