feat: react to successful txs from the front-end

--- a/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelOwner/ParcelOwner.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetail/ParcelOwner/ParcelOwner.css
@@ -7,7 +7,7 @@
   color: var(--gray);
 }
 
-.ParcelOwner.is-owner .button + .button {
+.ParcelOwner.is-owner .manage-button {
   margin-left: 30px;
 }
 
