feat: reactive txs and unifying implementations (#334)
* feat: react to successful txs from the front-end

* feat: consistent UI/UX between actions

* fix: isLoading->getLoading

* feat: remove transfer module and repeated code

--- a/webapp/src/components/BuyParcelByMortgagePage/MortgageForm/MortgageForm.css
+++ b/webapp/src/components/BuyParcelByMortgagePage/MortgageForm/MortgageForm.css
@@ -1,10 +1,4 @@
-.MortgageForm {
-  min-width: 400px;
-}
-
-.MortgageForm .ui.button + .ui.button {
-  margin-left: 20px;
-}
+.MortgageForm {}
 
 .MortgageFormGrid {
   display: block !important;
