--- a/webapp/src/components/BuyParcelByMortgagePage/MortgageForm/MortgageForm.css
+++ b/webapp/src/components/BuyParcelByMortgagePage/MortgageForm/MortgageForm.css
@@ -1,5 +1,3 @@
-.MortgageForm {}
-
 .MortgageFormGrid {
   display: block !important;
 }
@@ -23,6 +21,10 @@
   position: absolute;
   right: 0px;
   bottom: 10px;
+}
+
+.MortgageForm .actions button + button{
+  margin-left: 15px !important;
 }
 
 .ui.form.MortgageForm .address-input {
