fix: handle empty estate

--- a/webapp/src/components/EstateDetailPage/EstateDetail.css
+++ b/webapp/src/components/EstateDetailPage/EstateDetail.css
@@ -77,3 +77,13 @@
   margin-bottom: 0;
   margin-right: 25px;
 }
+
+.EstateDetail.empty {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.EstateDetail.empty .empty-estate-message {
+  color: var(--gray);
+}
