feat: show estate owner

--- a/webapp/src/components/EstateDetailPage/EstateDetail.css
+++ b/webapp/src/components/EstateDetailPage/EstateDetail.css
@@ -28,8 +28,21 @@
   margin: 0 0 auto 0;
 }
 
-.EstateDetail .EstateActions {
+.EstateDetail .parcel-actions-container {
   text-align: right;
+}
+
+.EstateDetail .parcel-actions-container .is-address {
+  display: inline-flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: flex-end;
+  color: var(--gray);
+}
+
+.EstateDetail .AddressBlock {
+  height: 24px;
+  margin-left: 10px;
 }
 
 .EstateDetail .details {
