fix: pending tx estates (#448)
* fix: show pending tx for estates

* fix: styles on forms

* fix: spanish translation paquetes

* fix: styles based on bad rebase resolution

* fix: standard modal-children and remove bad css rules

--- a/webapp/src/components/EstateDetailPage/EditEstateMetadata/EstateModal/EstateModal.css
+++ b/webapp/src/components/EstateDetailPage/EditEstateMetadata/EstateModal/EstateModal.css
@@ -31,12 +31,11 @@
 }
 
 .EstateModal .modal-children {
-  margin: 0px 0px 0px 50px;
+  margin: 0 0 0 50px;
 }
 
-.EstateModal .tx-idle {
-  margin: 0 auto 20px;
-  width: 310px;
+.EstateModal .tx-idle{
+  margin: 0 0 20px;
 }
 
 /* TODO: rules are duplicated on ParcelModal */
