--- a/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
+++ b/webapp/src/components/SettingsPage/SettingsForm/SettingsForm.css
@@ -1,9 +1,5 @@
-.SettingsForm .tx-pending .authorize-detail {
-  font-style: italic;
-}
-
 .SettingsForm.form .field {
-  margin-bottom: 30px;
+  margin-bottom: 15px;
 }
 
 .SettingsForm.form .field > label,
@@ -15,12 +11,6 @@
   margin-top: 1px;
   margin-right: 10px;
   float: left;
-}
-
-.SettingsForm .authorize-detail {
-  font-size: 16px;
-  overflow: hidden;
-  display: inline;
 }
 
 .SettingsForm .TxStatusText {
@@ -41,22 +31,47 @@
   text-overflow: ellipsis;
 }
 
-.SettingsForm .authorization-checks {
-  margin: 50px 0px;
+.SettingsForm .authorization-checks-container {
+  font-size: 16px;
+  font-weight: 400;
+}
+
+.SettingsForm .authorization-checks > .field {
+  margin-bottom: 2em;
 }
 
 .SettingsForm .authorization-checks label {
-  color: var(--gray);
-  font-weight: 400;
-  font-size: 16px;
   margin-bottom: 1em;
+  color: var(--gray);
+}
+
+.SettingsForm .authorization-checks .loader-tooltip {
+  left: -12px; /*Center of the loader circle*/
+}
+
+.SettingsForm .authorization-checks .ui.loader {
+  margin-right: 5px;
+  left: 6px;
+  top: 10px;
+  position: relative;
+  float: left;
+  display: inline-block;
+}
+
+.SettingsForm .title {
+  font-weight: 700;
+}
+
+.SettingsForm .description {
+  margin-top: 1em;
+  color: var(--gray);
+  font-size: 14px;
 }
 
 .SettingsForm .mana {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-between;
 }
 
 .SettingsForm .buy-more {
@@ -65,4 +80,26 @@
 
 .SettingsForm .disabled-buy-more {
   display: inline-block;
+}
+
+@media (max-width: 767px) {
+  .SettingsForm .authorization-checks {
+    margin-top: 25px;
+  }
+  .SettingsForm .authorization-checks:first-child {
+    margin-top: 0;
+  }
+}
+
+@media (min-width: 767px) {
+  .SettingsForm .mana-actions {
+    margin-left: 88px;
+  }
+
+  .SettingsForm .authorization-checks {
+    margin-right: 20px;
+  }
+  .SettingsForm .authorization-checks:last-child {
+    margin-right: 0;
+  }
 }
