feat: simplify actions, use /marketplace for pubs and inactive tab at marketplace

--- a/webapp/src/components/MarketplacePage/MarketplacePage.css
+++ b/webapp/src/components/MarketplacePage/MarketplacePage.css
@@ -31,8 +31,13 @@
   opacity: 0.8 !important;
 }
 
+.MarketplacePage .ui.label {
+  background-color: var(--dark-gray) !important;
+  color: white !important;
+}
+
 .MarketplacePage .ui.label.active {
-  background-color: var(--primary);
+  background-color: var(--primary) !important;
 }
 
 .MarketplacePage .menu.right > .item {
