feat: simplify actions (#525)
* feat: simplify actions, use /marketplace for pubs and inactive tab at marketplace

* refactor: marketplace (#528)

* refactor: marketplace

* chore: applied changes after review

* fix: render badge ar markaetplace

--- a/webapp/src/components/MarketplacePage/MarketplacePage.css
+++ b/webapp/src/components/MarketplacePage/MarketplacePage.css
@@ -31,7 +31,12 @@
   opacity: 0.8 !important;
 }
 
-.MarketplacePage .ui.label.active {
+.MarketplacePage .ui.menu .item > .label {
+  background-color: var(--dark-gray);
+  color: white;
+}
+
+.MarketplacePage .ui.menu .item > .label.active {
   background-color: var(--primary);
 }
 
