fix: preserve marker when dragging map

--- a/webapp/src/components/AssetTransactionHistory/AssetTransactionHistory.css
+++ b/webapp/src/components/AssetTransactionHistory/AssetTransactionHistory.css
@@ -1,3 +1,7 @@
+.ui.grid.AssetTransactionHistory {
+  margin-bottom: 16px;
+}
+
 .AssetTransactionHistory .transaction-history-header {
   background-color: var(--darker-gray);
   border-radius: 10px 10px 0px 0px;
