feat: yours on sale color key

--- a/webapp/src/components/ColorKeyPage/ColorKeyPage.css
+++ b/webapp/src/components/ColorKeyPage/ColorKeyPage.css
@@ -18,7 +18,7 @@
 }
 
 .ColorKeyPage .land-color-keys .land {
-  min-width: 132px;
+  min-width: 185px;
   margin-bottom: 15px;
   margin-right: 34px;
   overflow: hidden;
@@ -50,6 +50,7 @@
   }
 
   .ColorKeyPage .land-color-keys .land {
-    margin-right: 14px;
+    width: calc(100% / 3);
+    margin-right: 0;
   }
 }
