--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -106,6 +106,11 @@ a:hover,
   color: #00dbef;
   fill: #00dbef;
 }
+.yours-on-sale {
+  background-color: #ff4053;
+  color: #ff4053;
+  fill: #ff4053;
+}
 .unowned {
   background-color: #1b1e2d;
   color: #1b1e2d;
