fix: mobile timestamp

--- a/webapp/src/components/ActivityPage/Transaction/Transaction.css
+++ b/webapp/src/components/ActivityPage/Transaction/Transaction.css
@@ -73,6 +73,7 @@
 @media (max-width: 768px) {
   .Transaction .transaction-timestamp {
     margin-left: 0px;
+    display: block;
   }
 
   .Transaction .transaction-avatar {
