--- a/webapp/src/components/EstateDetailPage/EstateDetail.css
+++ b/webapp/src/components/EstateDetailPage/EstateDetail.css
@@ -129,7 +129,7 @@
   margin-top: 20px
 }
 
-@media (max-width: 768px) {
+@media (max-width: 992px) {
   .EstateDetail {
     overflow-x: hidden;
     overflow-y: auto;
@@ -141,5 +141,24 @@
   .EstateDetail .ParcelAttributes {
     margin-top: 0px;
     margin-bottom: 20px;
+  }
+
+  .ui.stackable.grid {
+    width: auto;
+    margin-left: 0!important;
+    margin-right: 0!important;
+  }
+
+  .ui.stackable.grid:not(.vertically)>.row {
+      margin: 0;
+      padding: 0;
+  }
+
+  .ui.grid>.stackable.stackable.row>.column, .ui.stackable.grid>.column.grid>.column, .ui.stackable.grid>.column.row>.column, .ui.stackable.grid>.column:not(.row), .ui.stackable.grid>.row>.column, .ui.stackable.grid>.row>.wide.column, .ui.stackable.grid>.wide.column {
+    width: 100%!important;
+    margin: 0 0!important;
+    -webkit-box-shadow: none!important;
+    box-shadow: none!important;
+    padding: 1rem 1rem!important;
   }
 }
