--- a/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
+++ b/webapp/src/components/ParcelDetailPage/ParcelDetailPage.css
@@ -40,8 +40,27 @@
   color: var(--gray);
 }
 
-@media (max-width: 768px) {
-  .ParcelDetailPage .parcel-owner-container {
+@media (max-width: 992px) {
+  .ParcelDetailPage .parcel-owner-container, ParcelDetail .parcel-actions-container {
     text-align: left !important;
+  }
+
+  .ui.stackable.grid {
+    width: auto;
+    margin-left: 0!important;
+    margin-right: 0!important;
+  }
+
+  .ui.stackable.grid:not(.vertically)>.row {
+      margin: 0;
+      padding: 0;
+  }
+
+  .ui.grid>.stackable.stackable.row>.column, .ui.stackable.grid>.column.grid>.column, .ui.stackable.grid>.column.row>.column, .ui.stackable.grid>.column:not(.row), .ui.stackable.grid>.row>.column, .ui.stackable.grid>.row>.wide.column, .ui.stackable.grid>.wide.column {
+    width: 100%!important;
+    margin: 0 0!important;
+    -webkit-box-shadow: none!important;
+    box-shadow: none!important;
+    padding: 1rem 1rem!important;
   }
 }
