--- a/webapp/src/components/EstateDetailPage/EstateDetail.css
+++ b/webapp/src/components/EstateDetailPage/EstateDetail.css
@@ -130,10 +130,6 @@
 }
 
 @media (max-width: 992px) {
-  .EstateDetail {
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
   .EstateDetail .estate-owner-container {
     text-align: left !important;
   }
@@ -143,18 +139,18 @@
     margin-bottom: 20px;
   }
 
-  .ui.stackable.grid {
+  .EstateDetail .ui.stackable.grid {
     width: auto;
     margin-left: 0!important;
     margin-right: 0!important;
   }
 
-  .ui.stackable.grid:not(.vertically)>.row {
+  .EstateDetail .ui.stackable.grid:not(.vertically)>.row {
       margin: 0;
       padding: 0;
   }
 
-  .ui.grid>.stackable.stackable.row>.column, .ui.stackable.grid>.column.grid>.column, .ui.stackable.grid>.column.row>.column, .ui.stackable.grid>.column:not(.row), .ui.stackable.grid>.row>.column, .ui.stackable.grid>.row>.wide.column, .ui.stackable.grid>.wide.column {
+  .EstateDetail .ui.stackable.grid>.row>.column, .EstateDetail .ui.stackable.grid>.row>.wide.column{
     width: 100%!important;
     margin: 0 0!important;
     -webkit-box-shadow: none!important;
