feat: add estate highlights (#592)
Close #583 

- Remove tags from `Parcels included` section 
- Show highlights

![screen shot 2018-10-18 at 1 36 24 pm](https://user-images.githubusercontent.com/7549152/47169951-3b569180-d2db-11e8-9491-46fc3db7bcd7.png)


I kept the tags from parcel when you edit the Estate's parcels just a way to show the user the attributes of the parcels to be included

--- a/webapp/src/components/EstateDetailPage/EstateDetail.css
+++ b/webapp/src/components/EstateDetailPage/EstateDetail.css
@@ -125,6 +125,10 @@
   margin-top: 20px;
 }
 
+.EstateDetail .row .column.highlights {
+  margin-top: 20px
+}
+
 @media (max-width: 768px) {
   .EstateDetail {
     overflow-x: hidden;
